jobs/Salesforce/MewsDEV/force-app/main/default/objects/Exchange_Rate__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>