jobs/Salesforce/MewsDEV/force-app/main/default/objects/Exchange_Rate__c/fields/Date_of_rate__c.field-meta.xml
<CustomField>
    <fullName>Date_of_rate__c</fullName>
    <label>Date of Rate</label>
    <type>Date</type>
</CustomField>