jobs/Salesforce/MewsDEV/force-app/main/default/objects/Exchange_Rate__c/fields/ISO_code__c.field-meta.xml
<CustomField>
    <fullName>ISO_code__c</fullName>
    <label>ISO code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>