jobs/Salesforce/MewsDEV/force-app/main/default/objects/Exchange_Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>