jobs/Salesforce/MewsDEV/force-app/main/default/objects/Exchange_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date_of_rate__c</columns>
    <columns>Country__c</columns>
    <columns>Currency__c</columns>
    <columns>ISO_code__c</columns>
    <columns>Amount__c</columns>
    <columns>Rate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>